--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -49,15 +49,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="16dp">
+                android:padding="16dp"
+                android:gravity="center_vertical">
 
                 <TextView
                     android:id="@+id/textLanguageSelection"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="45dp"
+                    android:layout_weight="1"
                     android:text="@string/language_selection"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
@@ -70,10 +70,9 @@
 
                     <Button
                         android:id="@+id/buttonLanguageSK"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
-                        android:layout_weight="1"
                         android:background="@color/light_orange"
                         android:padding="12dp"
                         android:text="SK"
@@ -81,15 +80,15 @@
 
                     <Button
                         android:id="@+id/buttonLanguageEN"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:background="@color/light_orange"
                         android:padding="12dp"
                         android:text="EN"
                         android:textColor="@android:color/white" />
                 </LinearLayout>
             </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
